src/components/redesign.css
/* ... */
.bar_c38106 .trailing_c38106 {
	top: 51px;
	gap: 8px;
	z-index: 102;
}
.bar_c38106 .channelTabs-trailing .trailing_c38106 {
	top: 44px;
	right: 10px;
}
.channelTabs-trailing .winButtons_c38106 {
	position: absolute;
	top: -53px;
	right: 6px;
	& .winButton_c38106 {
		width: var(--custom-app-top-bar-height);
		height: var(--custom-app-top-bar-height);
		padding-left: 10px;
		padding-right: 10px;
	}
}
#channelTabs-settingsMenu {
	position: relative;
	right: 20px;
}
.container__01ae2 > .container__9293f {
	z-index: 102;
}
.bar_c38106 .trailing_c38106 .iconWrapper__9293f {
	width: 30px;
	height: 30px;
	border-radius: 4px;
}
.bar_c38106 .trailing_c38106 .iconWrapper__9293f .icon__9293f {
	width: 24px;
	height: 24px;
}

.bar_c38106 .trailing_c38106 .iconWrapper__9293f.selected__9293f .icon__9293f {
	opacity: 1;
}
.bar_c38106 .trailing_c38106 .iconWrapper__9293f > svg > foreignObject {
	x: -2px;
	y: -2px;
	mask: none !important;
}

html .bar_c38106 {
	top: 0;
	right: 0;
	z-index: 102;
}
.inviteToolbar__133bf > .clickable__9293f.iconWrapper__9293f {
	right: 90px;
	flex-wrap: wrap;
}
.inviteToolbar__133bf .iconWrapper__9293f:after {
	border-left: 1px solid var(--border-subtle);
	content: "";
	margin-left: 55px;
	margin-top: -29px;
	height: calc(var(--custom-app-top-bar-height) - var(--space-12));
}
.winButtons_c38106 {
	position: absolute;
	gap: unset;
	justify-content: center;
	bottom: 35px;
	left: -12px;
	z-index: 3001;
	-webkit-app-region: no-drag !important;
	.winButton_c38106 {
		top: -4px;
		align-items: center;
		width: 28px;
		height: 22px;
	}
}
.winButtonsWithDivider_c38106:before {
	border: unset;
}
.systemBar_c38106 {
	background-color: var(--background-tertiary);
	min-height: 22px;
	.winButtons_c38106 {
		bottom: 39px;
		left: -84px;
	}
	.platform-linux & {
		display: none;
	}
}
.channelTabs-tabContainer div {
	margin-bottom: 0 !important;
}
/* server list */
.base_c48ade .sidebar_c48ade > .guilds_c48ade {
	width: 72px;
	.scroller_ef3116 {
		padding-top: 2px;
		gap: 0px !important;
		ul.stack_dbd263 {
			height: auto !important;
		}
	}
	.listItem__650eb:has(.guildSeparator__252b6) {
		margin: 6px 0 8px 0;
	}
	.listItem__650eb {
		margin: 0 0 0px;
	}
	.guildSeparator__252b6 {
		height: 2px;
	}
	.folderIcon__48112 {
		margin-top: 0px;
		margin-left: -1px;
		& svg {
			width: 24px;
			height: 24px;
		}
	}
}
.folderGroup__48112 {
	--custom-folder-preview-padding: 6px;
	--custom-folder-color: #7289da;
}
.folderGroup__48112:not(.isExpanded__48112) .folderIcon__48112 svg {
	display: none;
}
.folderGroupBackground__48112 {
	left: 11px;
	width: 48px;
	bottom: 4px;
	border-radius: 16px 16px 25px 25px;
	background: var(--background-modifier-accent);
	border: none;
}
.folderIconWrapper__48112 {
	width: 48px;
	height: 48px;
	overflow: hidden;
	border-radius: 16px;
	--bg-mod-subtle: rgba(114, 137, 218, 0.4) !important;
}
.expandedFolderIconWrapper__48112 {
	margin: 0;
	width: 48px;
	height: 48px;
}
.folderGroup__48112:is(.isExpanded__48112) .folderPreviewWrapper__48112 {
	display: none;
}
.folderPreviewGuildIcon__48112 {
	border-radius: 32px !important;
}

.listItem__650eb:has(.circleIcon__5bc7e) {
	margin: 6px 0 0;
	.circleIconButton__5bc7e {
		border-radius: 50%;
		width: 48px;
		height: 48px;
	}
}
.guildsError_e8d03f {
	width: 48px;
	height: 48px;
	background: (rgba(240, 71, 71, 0.1));
	border-color: var(--red);
	&:hover {
		background: var(--red);
	}
}
.mention__3b95d {
	box-sizing: border-box;
	opacity: 0.9;
	border: unset;
	box-shadow: unset;
	right: 1px;
}

.sidebar_c48ade:after {
	display: none;
}

/* fix unread dm gap */
.stack_dbd263#guild-list-unread-dms {
	gap: 16px !important;
	padding-bottom: 10px !important;
}

/* hides left sidebar when fullscreen mode */
.base_c48ade[data-fullscreen="true"] {
	.sidebar_c48ade {
		display: none;
	}
}

/* fix search bar when 3rd icon appears */
.base_c48ade:has(.trailing_c38106 > :nth-child(3):not(.winButtons_c38106)) .search__49676 .searchBar__97492 {
	margin-right: 120px !important;
}

.trailing_c38106:has(.button__85643.iconWrapper__9293f[aria-label="Update Ready!"]) .winButtons_c38106 {
	left: 25px !important;
}

.trailing_c38106 .iconWrapper__9293f {
	display: flex;
	align-items: center;
	justify-content: center;
}

.base_c48ade:has(.trailing_c38106 > :nth-child(4):not(.winButtons_c38106)) .winButtons_c38106 {
	right: 0;
}

.spriteContainer__04eed {
	--custom-emoji-sprite-size: 24px !important;
}

